--- a/di-shi-liu-zhang-lamp-huan-jing-pei-zhi/16.2-yuan-ma-bian-yi-lamp.md
+++ b/di-shi-liu-zhang-lamp-huan-jing-pei-zhi/16.2-yuan-ma-bian-yi-lamp.md
@@ -318,7 +318,7 @@ bin  include  lib  share
 bin  build  cgi-bin  conf  error  htdocs  icons  include  logs  man  manual  modules 
 ```
 
-10、进入 php 解压目录，编译安装 php:
+11、进入 php 解压目录，编译安装 php:
 
 ```bash
 [root@centos php-5.6.35]# yum install -y epel-release
@@ -332,52 +332,60 @@ bin  build  cgi-bin  conf  error  htdocs  icons  include  logs  man  manual  mod
 [root@centos php-5.6.35]# make install
 ```
 
-
-
-
-
+安装完成，复制php 生成环境配置文件到 PHP 安装目录下的 etc/ 目录下：
 
 ```bash
-
-
+[root@centos php-5.6.35]# cp php.ini-production /usr/local/php/etc/php.ini
 ```
 
+编辑 /usr/local/apache2/conf/httpd.conf 文件：
+
+```bash：q
+将 #ServerName www.example.com:80 修改为：ServerName localhost:80
+在 DirectoryIndex index.html 后面添加 index.php。添加后的 DirectoryIndex index.html index.php
+在 AddType application/x-gzip .gz .tgz 行下面添加新的行：AddType application/x-httpd-php .php
+确认配置文件中的模块配置端有该模块且是打开状态：LoadModule php5_module        modules/libphp5.so
+```
+
+12、检查apache 配置是否有误：
 
 ```bash
-
-
+[root@centos php-5.6.35]# /usr/local/apache2/bin/apachectl -t
+Syntax OK
 ```
 
-
+13、启动apache:
 
 ```bash
-
-
+[root@centos php-5.6.35]# /usr/local/apache2/bin/apachectl
 ```
 
-
+启动后，检查监听进程
 
 ```bash
-
-
+[root@centos php-5.6.35]# ps aux|egrep httpd
+root      56068  0.0  0.7 217776  7328 ?        Ss   23:43   0:00 /usr/local/apache2/bin/httpd
+daemon    56069  0.0  0.6 506740  5980 ?        Sl   23:43   0:00 /usr/local/apache2/bin/httpd
+daemon    56070  0.0  0.6 506740  5980 ?        Sl   23:43   0:00 /usr/local/apache2/bin/httpd
+daemon    56071  0.0  0.6 506740  5980 ?        Sl   23:43   0:00 /usr/local/apache2/bin/httpd
+root      56163  0.0  0.1 112660   976 pts/1    R+   23:43   0:00 grep -E --color=auto httpd
 ```
 
-
+查看监听的端口：
 
 ```bash
-
-
+[root@centos php-5.6.35]# ss -lntp|egrep httpd
+LISTEN     0      128         :::80                      :::*                   users:(("httpd",pid=56071,fd=4),("httpd",pid=56070,fd=4),("httpd",pid=56069,fd=4),("httpd",pid=56068,fd=4))
 ```
 
+开放防火墙的 80 端口：
 
-
-
-```bash
-
-
+```bas
+[root@centos php-5.6.35]# firewall-cmd --add-service=http
+success
 ```
 
-
+14、访问测试：
 
 ```bash
 
