--- a/di-shi-liu-zhang-lamp-huan-jing-pei-zhi/16.2-yuan-ma-bian-yi-lamp.md
+++ b/di-shi-liu-zhang-lamp-huan-jing-pei-zhi/16.2-yuan-ma-bian-yi-lamp.md
@@ -305,7 +305,7 @@ bin  include  lib  share
 
 ```bash
 [root@centos libxml2-2.9.2]# cd ../httpd-2.4.33
-[root@centos httpd-2.4.33]# ./configure --prefix=/usr/local/apache2 --enable-rewrite --with-z --enable-so --enable-isapi --enable-http --enable-proxy --enable-proxy-connect --enable-proxy-http --enable-proxy-ajp --enable-proxy-balancer --enable-session --enable-ssl --enable-static-htpasswd --with-apr=/usr/local/apr --with-apr-util=/usr/local/apr-util --with-pcre=/usr/local/pcre --with-libxml2=/usr/local/src/libxml2-2.9.2 --with-ssl=/usr/local/openssl --with-curl=/usr/local/curl --with-z=/usr/local/zlib/
+[root@centos httpd-2.4.33]# ./configure --prefix=/usr/local/apache2 --enable-rewrite --with-z --enable-so --enable-isapi --enable-http --enable-proxy --enable-proxy-connect --enable-proxy-http --enable-proxy-ajp --enable-proxy-balancer --enable-ssl --enable-static-htpasswd --with-apr=/usr/local/apr --with-apr-util=/usr/local/apr-util --with-pcre=/usr/local/pcre --with-libxml2=/usr/local/src/libxml2-2.9.2 --with-ssl=/usr/local/openssl --with-curl=/usr/local/curl --with-z=/usr/local/zlib/
 [root@centos httpd-2.4.33]# make -j $(awk '/core id/{(tot=tot+1)};END {print tot}' /proc/cpuinfo)
 [root@centos httpd-2.4.33]# make install
 
@@ -327,7 +327,7 @@ bin  build  cgi-bin  conf  error  htdocs  icons  include  logs  man  manual  mod
 
 ```bash
 [root@centos httpd-2.4.33]# cd ../php-5.6.35
-[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php  --with-apxs2=/usr/local/apache2/bin/apxs --enable-mod-charset --enable-debug --disable-ipv6 --with-pcre-regex=/usr/local/pcre/ -with-libxml-dir=/usr/local/libxml2/ --with-zlib=/usr/local/zlib/ --with-curl=/usr/local/curl/ --with-gd --with-jpeg-dir --with-png-dir --with-freetype-dir --enable-gd-native-ttf --with-mcrypt --enable-mysqlnd --enable-soap --enable-sockets  --enable-exif --enable-bcmath --with-gettext
+[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --with-config-file-path=/usr/local/php/etc --with-apxs2=/usr/local/apache2/bin/apxs --enable-mod-charset --enable-debug --disable-ipv6 --with-pcre-regex=/usr/local/pcre/ -with-libxml-dir=/usr/local/libxml2/ --with-zlib=/usr/local/zlib/ --with-curl=/usr/local/curl/ --with-gd --with-jpeg-dir --with-png-dir --with-freetype-dir --enable-gd-native-ttf --with-mcrypt --enable-mysqlnd --enable-soap --enable-sockets  --enable-exif --enable-bcmath --with-gettext
 [root@centos php-5.6.35]# make -j $(awk '/core id/{(tot=tot+1)};END {print tot}' /proc/cpuinfo)
 [root@centos php-5.6.35]# make install
 ```
