--- a/di-shi-qi-zhang-lnmp-huan-jing-pei-zhi/17.3-pei-zhi-xu-ni-zhu-ji.md
+++ b/di-shi-qi-zhang-lnmp-huan-jing-pei-zhi/17.3-pei-zhi-xu-ni-zhu-ji.md
@@ -6,3 +6,72 @@ description: nginx 配置虚拟主机是必须掌握的一节！
 
 nginx 配置虚拟机主机不同于 apache ，它的配置非常灵活。
 
+1、在 /usr/local/nginx/ 目录下创建 conf.d 目录：
+
+```bash
+[root@centos nginx-1.13.12]# mkdir -p /usr/local/nginx/conf.d
+```
+
+2、编辑nginx 主配置文件 /usr/local/nginx/conf/nginx.conf ,在 最后一个 }  上面插入一行：
+
+```bash
+    include /usr/local/nginx/conf.d/*.conf;
+```
+
+3、在 /usr/local/nginx/conf.d/ 目录下创建虚拟主机配置文件，文件名最好以域名命名，后期方便维护检查，这里我以 test.nginx.org 为例：
+
+```bashserver {
+    listen 80;
+    server_name test.nginx.org;
+
+    root /data/nginx/website/test.nginx.org;
+    index index.htm index.html index.php;
+
+    access_log /usr/local/nginx/logs/access.log;
+
+    location / {
+        root /data/nginx/website/test.nginx.org;
+        index index.htm index.html index.php;
+    }
+
+    location ~ \.php$ {
+        root /data/nginx/website/test.nginx.org;
+        fastcgi_pass  127.0.0.1:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include       fastcgi_params;
+    }
+}
+```
+
+配置完成，检测下配置，确认无误：
+
+```bash
+[root@centos nginx-1.13.12]# /usr/local/nginx/sbin/nginx -t
+nginx: the configuration file /usr/local/nginx/conf/nginx.conf syntax is ok
+nginx: configuration file /usr/local/nginx/conf/nginx.conf test is successful
+```
+
+4、重新加载nginx：
+
+```bash
+[root@centos nginx-1.13.12]# systemctl reload nginx
+```
+
+5、根据配置文件，创建web 项目存放目录：
+
+```bash
+[root@centos nginx-1.13.12]# mkdir -p /data/nginx/website/test.nginx.org
+```
+
+6、在web 项目目录创建测试文件 index.php,内容如下：
+
+```bash
+<?php
+
+    echo phpinfo();
+
+?>
+```
+
+7、在本地hosts 做本地解析，然后浏览器中用域名访问：
