--- a/di-shi-qi-zhang-lnmp-huan-jing-pei-zhi/17.3-pei-zhi-xu-ni-zhu-ji.md
+++ b/di-shi-qi-zhang-lnmp-huan-jing-pei-zhi/17.3-pei-zhi-xu-ni-zhu-ji.md
@@ -20,7 +20,8 @@ nginx 配置虚拟机主机不同于 apache ，它的配置非常灵活。
 
 3、在 /usr/local/nginx/conf.d/ 目录下创建虚拟主机配置文件，文件名最好以域名命名，后期方便维护检查，这里我以 test.nginx.org 为例：
 
-```bashserver {
+```bash
+server {
     listen 80;
     server_name test.nginx.org;
 
