--- a/di-shi-qi-zhang-lnmp-huan-jing-pei-zhi/17.2-yuan-ma-bian-yi-lnmp.md
+++ b/di-shi-qi-zhang-lnmp-huan-jing-pei-zhi/17.2-yuan-ma-bian-yi-lnmp.md
@@ -251,7 +251,7 @@ WantedBy=multi-user.target
 ```bash
 [root@centos nginx-1.13.12]# cd ../php-5.6.35
 [root@centos php-5.6.35]# useradd -s /sbin/nologin php-fpm
-[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --enable-fpm --with-fpm-user=php-fpm --with-fpm-group=php-fpm --enable-gcov --enable-debug --with-config-file-path=/usr/local/php/etc --with-libxml-dir=/usr/local/libxml2 --with-openssl=/usr/local/openssl/ --with-pcre-regex=/usr/local/pcre --with-zlib=/usr/local/zlib --enable-bcmath --with-curl=/usr/local/curl --with-jpeg-dir --with-png-dir --with-freetype-dir --with-gettext --with-mcrypt --enable-shmop --enable-soap  --enable-mysqlnd --enable-ftp -enable-sockets --enable-exif --disable-ipv6
+[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --enable-fpm --with-fpm-user=php-fpm --with-fpm-group=php-fpm --enable-gcov --enable-debug --with-config-file-path=/usr/local/php/etc --with-libxml-dir=/usr/local/libxml2 --with-openssl=/usr/local/openssl/ --with-pcre-regex=/usr/local/pcre --with-zlib=/usr/local/zlib --enable-bcmath --with-curl=/usr/local/curl --with-jpeg-dir --with-png-dir --with-freetype-dir --with-gettext --with-mcrypt --enable-shmop --enable-soap  --enable-mysqlnd --enable-ftp -enable-sockets --enable-exif --disable-ipv6  --enable-mbstring --with-gd --with-mysqli
 ```
 
 配置检查编译参数报错：
@@ -274,7 +274,7 @@ configure: error: To enable code coverage reporting you must have LTP installed
 重新配置检查编译参数报错：
 
 ```bash
-[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --enable-fpm --with-fpm-user=php-fpm --with-fpm-group=php-fpm --enable-gcov --enable-debug --with-config-file-path=/usr/local/php/etc --with-libxml-dir=/usr/local/libxml2 --with-openssl=/usr/local/openssl/ --with-pcre-regex=/usr/local/pcre --with-zlib=/usr/local/zlib --enable-bcmath --with-curl=/usr/local/curl --with-jpeg-dir --with-png-dir --with-freetype-dir --with-gettext --with-mcrypt --enable-shmop --enable-soap  --enable-mysqlnd --enable-ftp -enable-sockets --enable-exif --disable-ipv6
+[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --enable-fpm --with-fpm-user=php-fpm --with-fpm-group=php-fpm --enable-gcov --enable-debug --with-config-file-path=/usr/local/php/etc --with-libxml-dir=/usr/local/libxml2 --with-openssl=/usr/local/openssl/ --with-pcre-regex=/usr/local/pcre --with-zlib=/usr/local/zlib --enable-bcmath --with-curl=/usr/local/curl --with-jpeg-dir --with-png-dir --with-freetype-dir --with-gettext --with-mcrypt --enable-shmop --enable-soap  --enable-mysqlnd --enable-ftp -enable-sockets --enable-exif --disable-ipv6 --enable-mbstring --with-gd --with-mysqli
 ```
 
 配置检查编译参数报错：
@@ -295,7 +295,7 @@ configure: error: mcrypt.h not found. Please reinstall libmcrypt.
 再次配置检查编译参数并编译：
 
 ```bash
-[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --enable-fpm --with-fpm-user=php-fpm --with-fpm-group=php-fpm --enable-gcov --enable-debug --with-config-file-path=/usr/local/php/etc --with-libxml-dir=/usr/local/libxml2 --with-openssl=/usr/local/openssl/ --with-pcre-regex=/usr/local/pcre --with-zlib=/usr/local/zlib --enable-bcmath --with-curl=/usr/local/curl --with-jpeg-dir --with-png-dir --with-freetype-dir --with-gettext --with-mcrypt --enable-shmop --enable-soap  --enable-mysqlnd --enable-ftp -enable-sockets --enable-exif --disable-ipv6
+[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --enable-fpm --with-fpm-user=php-fpm --with-fpm-group=php-fpm --enable-gcov --enable-debug --with-config-file-path=/usr/local/php/etc --with-libxml-dir=/usr/local/libxml2 --with-openssl=/usr/local/openssl/ --with-pcre-regex=/usr/local/pcre --with-zlib=/usr/local/zlib --enable-bcmath --with-curl=/usr/local/curl --with-jpeg-dir --with-png-dir --with-freetype-dir --with-gettext --with-mcrypt --enable-shmop --enable-soap  --enable-mysqlnd --enable-ftp -enable-sockets --enable-exif --disable-ipv6 --enable-mbstring --with-gd --with-mysqli
 [root@centos php-5.6.35]# make
 ```
 
@@ -314,7 +314,7 @@ configure: error: mcrypt.h not found. Please reinstall libmcrypt.
 解决方法：去掉编译参数中的 --with-openssl=/usr/local/openssl ，重新配置检查编译参数：
 
 ```bash
-[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --enable-fpm --with-fpm-user=php-fpm --with-fpm-group=php-fpm --enable-gcov --enable-debug --with-config-file-path=/usr/local/php/etc --with-libxml-dir=/usr/local/libxml2 --with-pcre-regex=/usr/local/pcre --with-zlib=/usr/local/zlib --enable-bcmath --with-curl=/usr/local/curl --with-jpeg-dir --with-png-dir --with-freetype-dir --with-gettext --with-mcrypt --enable-shmop --enable-soap  --enable-mysqlnd --enable-ftp -enable-sockets --enable-exif --disable-ipv6
+[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --enable-fpm --with-fpm-user=php-fpm --with-fpm-group=php-fpm --enable-gcov --enable-debug --with-config-file-path=/usr/local/php/etc --with-libxml-dir=/usr/local/libxml2 --with-pcre-regex=/usr/local/pcre --with-zlib=/usr/local/zlib --enable-bcmath --with-curl=/usr/local/curl --with-jpeg-dir --with-png-dir --with-freetype-dir --with-gettext --with-mcrypt --enable-shmop --enable-soap  --enable-mysqlnd --enable-ftp -enable-sockets --enable-exif --disable-ipv6 --enable-mbstring --with-gd --with-mysqli
 ```
 
 重新编译及安装：
