--- a/di-shi-liu-zhang-lamp-huan-jing-pei-zhi/16.5-an-zhuang-discuz.md
+++ b/di-shi-liu-zhang-lamp-huan-jing-pei-zhi/16.5-an-zhuang-discuz.md
@@ -2,3 +2,90 @@
 
 安装discuz
 
+1、从discuz 官方下载最新的安装包到服务器指定的web 项目目录，比如我的 /data/apache/website/discuz.apache.org, 我这里以git 方式下载（先确保系统有安装git 工具）
+
+```bash
+[root@centos ~]# mkdir -p /data/apache/website/discuz.apache.org
+[root@centos ~]# git clone https://gitee.com/ComsenzDiscuz/DiscuzX.git /data/apache/website/discuz.apache.org/
+Cloning into '/data/apache/website/discuz.apache.org'...
+remote: Counting objects: 7083, done.
+remote: Compressing objects: 100% (4572/4572), done.
+remote: Total 7083 (delta 2502), reused 6982 (delta 2462)
+Receiving objects: 100% (7083/7083), 11.96 MiB | 16.00 KiB/s, done.
+Resolving deltas: 100% (2502/2502), done.
+```
+
+下载完成后，查看web 项目目录：
+
+```bash
+[root@centos ~]# ls /data/apache/website/discuz.apache.org/
+readme  README.md  upload  utility
+```
+
+2、创建discuz 安装数据库，并授权：
+
+```bash
+[root@centos ~]# mysql -uroot -p -e "create database discuz character set utf8"
+Enter password:
+[root@centos ~]# mysql -uroot -p -e "grant all privileges on discuz.* to 'discuz'@'localhost' identified by 'discuz123'"
+Enter password:
+[root@centos ~]# mysql -uroot -p -e 'flush privileges'
+Enter password:
+```
+
+3、编辑 apache 虚拟主机配置文件/usr/local/apache2/conf/extra/httpd-vhosts.conf,在原有的配置文件下面，添加一个新的配置，如下：
+
+```bash
+<VirtualHost 192.168.137.101:80>
+    ServerName discuz.apache.org
+    DocumentRoot "/data/apache/website/discuz.apache.org/upload"
+    CustomLog "logs/access.log" common
+    ErrorLog "logs/error.log"
+    <Directory "/data/apache/website/discuz.apache.org/upload">
+        Options Indexes
+        AllowOverride ALL
+        Require all granted
+    </Directory>
+</VirtualHost>
+```
+
+4、检查 httpd 配置，并重载 httpd：
+
+```bash
+[root@centos ~]# /usr/local/apache2/bin/apachectl -t
+Syntax OK
+```
+
+```bash
+[root@centos ~]# systemctl reload httpd
+```
+
+5、本地配hosts 解析，使用域名访问安装discuz:
+
+
+安装自检有报错：
+
+
+解决方法：先到服务器上授权对应的web 项目目录：
+
+```bash
+[root@centos ~]# chmod -R 777 /data/apache/website/discuz.apache.org/upload/{config,data,uc_client,uc_server}
+```
+
+然后进入php 源码目录，加参数 --with-mysqli 重新编译安装php:
+
+```bash
+[root@centos ~]# cd /usr/local/src/php-5.6.35
+[root@centos php-5.6.35]# ./configure --prefix=/usr/local/php --with-config-file-path=/usr/local/php/etc --with-apxs2=/usr/local/apache2/bin/apxs --enable-mod-charset --enable-debug --disable-ipv6 --with-pcre-regex=/usr/local/pcre/ -with-libxml-dir=/usr/local/libxml2/ --with-zlib=/usr/local/zlib/ --with-curl=/usr/local/curl/ --with-gd --with-jpeg-dir --with-png-dir --with-freetype-dir --enable-gd-native-ttf --with-mcrypt --enable-mysqlnd --enable-soap --enable-sockets  --enable-exif --enable-bcmath --with-gettext --with-mysqli
+[root@centos php-5.6.35]# make
+[root@centos php-5.6.35]# make install
+```
+
+
+
+
+
+
+
+
+
