--- a/di-shi-ba-zhang-nfs-yu-samba/18.1nfs-wen-jian-gong-xiang.md
+++ b/di-shi-ba-zhang-nfs-yu-samba/18.1nfs-wen-jian-gong-xiang.md
@@ -6,3 +6,165 @@ description: NFS：Network File System （网络文件共享系统）
 
 1、使用yum 安装
 
+```bash
+[root@centos ~]# yum install -y nfs-utils
+```
+
+2、创建共享目录：
+
+```bash
+[root@centos ~]# mkdir -p /data/nfs/share
+```
+
+3、编辑 /etc/exports ，配置共享规则：
+
+```bash
+[root@centos ~]# cat /etc/exports
+/data/nfs/share 192.168.137.10(rw,sync,no_root_squash,no_subtree_check)
+```
+
+4、查看启动脚本：
+
+```bash
+[root@centos ~]# cat /usr/lib/systemd/system/nfs.service
+[Unit]
+Description=NFS server and services
+DefaultDependencies=no
+Requires= network.target proc-fs-nfsd.mount
+Requires= nfs-mountd.service
+Wants=rpcbind.socket network-online.target
+Wants=rpc-statd.service nfs-idmapd.service
+Wants=rpc-statd-notify.service
+
+After= network-online.target local-fs.target
+After= proc-fs-nfsd.mount rpcbind.socket nfs-mountd.service
+After= nfs-idmapd.service rpc-statd.service
+Before= rpc-statd-notify.service
+
+# GSS services dependencies and ordering
+Wants=auth-rpcgss-module.service
+After=rpc-gssd.service gssproxy.service
+
+Wants=nfs-config.service
+After=nfs-config.service
+
+[Service]
+EnvironmentFile=-/run/sysconfig/nfs-utils
+
+Type=oneshot
+RemainAfterExit=yes
+ExecStartPre=-/usr/sbin/exportfs -r
+ExecStartPre=-/bin/sh -c '/bin/kill -HUP `cat /run/gssproxy.pid`'
+ExecStart=/usr/sbin/rpc.nfsd $RPCNFSDARGS
+ExecStop=/usr/sbin/rpc.nfsd 0
+ExecStopPost=/usr/sbin/exportfs -au
+ExecStopPost=/usr/sbin/exportfs -f
+
+ExecReload=-/usr/sbin/exportfs -r
+
+[Install]
+WantedBy=multi-user.target
+```
+
+5、启动nfs 服务：
+
+```bash
+[root@centos ~]# systemctl start nfs rpcbind
+```
+
+启动后，查看监听的进程：
+
+```bash
+[root@centos ~]# ps aux|egrep 'nfs|rpcbind'
+rpc        4377  0.1  0.1  64956  1416 ?        Ss   01:59   0:00 /sbin/rpcbind -w
+root       4406  0.0  0.0      0     0 ?        S<   01:59   0:00 [nfsd4_callbacks]
+root       4412  0.0  0.0      0     0 ?        S    01:59   0:00 [nfsd]
+root       4413  0.0  0.0      0     0 ?        S    01:59   0:00 [nfsd]
+root       4414  0.0  0.0      0     0 ?        S    01:59   0:00 [nfsd]
+root       4415  0.0  0.0      0     0 ?        S    01:59   0:00 [nfsd]
+root       4416  0.0  0.0      0     0 ?        S    01:59   0:00 [nfsd]
+root       4417  0.0  0.0      0     0 ?        S    01:59   0:00 [nfsd]
+root       4418  0.0  0.0      0     0 ?        S    01:59   0:00 [nfsd]
+root       4419  0.0  0.0      0     0 ?        S    01:59   0:00 [nfsd]
+root       4423  0.0  0.1 112660   984 pts/0    R+   01:59   0:00 grep -E --color=auto nfs|rpcbind
+```
+
+6、开启防火墙：
+
+```bash
+[root@centos ~]# firewall-cmd --add-service={nfs,rpc-bind,mountd} --permanent
+success
+[root@centos ~]# firewall-cmd --reload
+success
+```
+
+
+
+1、客户端安装 nfs-utilfs；
+
+```bash
+[root@node10 ~ 14:02:02]#yum install -y nfs-utils
+```
+
+2、创建挂在目录：
+
+```bash
+[root@node10 ~ 14:01:53]#mkdir -p /data/mmt
+```
+
+3、挂在目录：
+
+```bash
+[root@node10 ~ 14:02:53]#mount -t nfs 192.168.137.101:/data/nfs/share /data/mmt/
+```
+
+查看挂载
+
+```bash
+[root@node10 ~ 15:34:01]#df -h
+文件系统                         容量  已用  可用 已用% 挂载点
+/dev/mapper/centos-root           87G   36G   51G   42% /
+devtmpfs                         2.0G     0  2.0G    0% /dev
+tmpfs                            2.0G  2.8M  2.0G    1% /dev/shm
+tmpfs                            2.0G   25M  1.9G    2% /run
+tmpfs                            2.0G     0  2.0G    0% /sys/fs/cgroup
+/dev/sda1                        494M  146M  349M   30% /boot
+/dev/mapper/centos-home          9.4G  7.1G  2.3G   76% /home
+tmpfs                            394M     0  394M    0% /run/user/0
+tmpfs                            394M     0  394M    0% /run/user/1000
+192.168.137.101:/data/nfs/share   92G  1.1G   91G    2% /data/mmt
+```
+
+
+
+
+测试NFS：
+
+1、在Server 端的共享目录里面创建文件 test.sh
+
+```bash
+[root@centos ~]# touch /data/nfs/share/test.sh
+```
+
+2、在Client 端的挂载目录里面创建目录 test:
+
+```bash
+[root@node10 ~ 14:04:24]#mkdir /data/mmt/test
+```
+
+3、分别在Server 端和 Client 端查看共享目录和挂在目录，看内容是否一致：
+
+```bash
+[root@centos ~]# ll /data/nfs/share/
+total 0
+drwxr-xr-x 2 root root 6 Apr 19 02:04 test
+-rw-r--r-- 1 root root 0 Apr 19 02:04 test.sh
+```
+
+```bash
+[root@node10 ~ 14:04:37]#ll /data/mmt/
+总用量 0
+drwxr-xr-x 2 root root 6 4月  19 14:04 test
+-rw-r--r-- 1 root root 0 4月  19 14:04 test.s
+```
+
