--- a/di-shi-wu-zhang-java-huan-jing-pei-zhi/15.5-pei-zhi-xu-ni-zhu-ji.md
+++ b/di-shi-wu-zhang-java-huan-jing-pei-zhi/15.5-pei-zhi-xu-ni-zhu-ji.md
@@ -1,4 +1,27 @@
 # 15.5：配置虚拟主机
 
-绑定指定IP
+默认情况下，服务器上的tomcat 会监控服务器上的所有服务器。这就导致了我使用服务器上所有IP + 端口都可以访问到该tomcat 项目。为避免出现这样的情况。我们可以指定tomcat 绑定单个IP，即：tomcat 只监听某个IP 的8080 端口。
 
+1、编辑 tomcat 主配置文件 /usr/local/tomcat/conf/server.xml ，找到配置文件文件中 <Connector port="8080" protocol="HTTP/1.1" connectionTimeout="20000" redirectPort="8443" /> 段，增加 address= 参数：
+
+```bash
+    <Connector port="8080" protocol="HTTP/1.1"
+               address="192.168.137.101"
+               connectionTimeout="20000"
+               redirectPort="8443" />
+```
+
+修改好，保存退出。重启下tomcat:
+
+```bash
+[root@centos ~]# systemctl restart tomcat
+```
+
+2、在服务器上查看监听的IP及端口：
+
+```bash
+[root@centos ~]# ss -lntp |egrep java
+LISTEN     0      100     ::ffff:192.168.137.101:8080                    :::*                   users:(("java",pid=1942,fd=49))
+LISTEN     0      1         ::ffff:127.0.0.1:8005                    :::*                   users:(("java",pid=1942,fd=70))
+LISTEN     0      100         :::8009                    :::*                   users:(("java",pid=1942,fd=54))
+```
