--- a/di-shi-wu-zhang-java-huan-jing-pei-zhi/15.5-pei-zhi-xu-ni-zhu-ji.md
+++ b/di-shi-wu-zhang-java-huan-jing-pei-zhi/15.5-pei-zhi-xu-ni-zhu-ji.md
@@ -27,4 +27,9 @@ LISTEN     0      100     ::ffff:192.168.137.101:8080                    :::*   
 LISTEN     0      1         ::ffff:127.0.0.1:8005                    :::*                   users:(("java",pid=1942,fd=70))
 LISTEN     0      100         :::8009                    :::*                   users:(("java",pid=1942,fd=54))
 ```
+3、测试访问，使用IP 192.168.137.101:8080 访问tomcat 项目，可以正常访问。
+
+
+但是使用该服务器上的其它IP 地址访问，则无法访问：
+
 
